# overgraph

./: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
benches/: core_ops.rs  query_ops.rs
docs/: api-reference.md  architecture-overview.md  getting-started.md  gql-subset.md
docs/04-quality/workloads/: scenario-contract.json
examples/node/: gql-readonly.mjs
examples/python/: gql_readonly.py
examples/rust/: gql_readonly.rs
overgraph-node/: Cargo.toml  README.md  dts-header.d.ts  index.d.ts  index.js  package-lock.json  package.json  query-types.d.ts  schema-types.d.ts  tsconfig.types.json
overgraph-node/__test__/: benchmark-v2.mjs  gql.mjs  property-indexes.mjs  queries.mjs  schemas.mjs
overgraph-node/__test__/types/: declarations.ts
overgraph-node/src/: lib.rs
overgraph-python/: Cargo.toml  README.md  pyproject.toml
overgraph-python/python/overgraph/: __init__.pyi  async_api.py
overgraph-python/src/: lib.rs
overgraph-python/tests/: test_async.py  test_batch.py  test_gql.py  test_property_indexes.py  test_query_api.py  test_schemas.py
src/: graph_row.rs  lib.rs  manifest.rs  memtable.rs  planner_stats.rs  schema.rs  scrub.rs  secondary_index_key.rs  segment_components.rs  segment_reader.rs  segment_writer.rs  source_list.rs  types.rs
src/engine/: mod.rs  pipeline_exec.rs  query.rs  query_exec.rs  query_ir.rs  query_plan.rs  read.rs  schema_management.rs  txn.rs  write.rs
src/engine/tests/: gql_execution.rs  graph_rows.rs  label_catalog.rs  lifecycle.rs  query_planner.rs  read.rs  schema_management.rs  write.rs
src/gql/: ast.rs  eval.rs  index.rs  lower.rs  metadata.rs  mod.rs  params.rs  parser.rs  schema.rs  semantic.rs
tools/: cross_language_schema_smoke.mjs
tools/bench/: python_connector_benchmark.py
