[workspace]
members = [".", "overgraph-node", "overgraph-python"]

[package]
name = "overgraph"
version = "0.12.0"
edition = "2021"
description = "An absurdly fast embedded graph database. Pure Rust, sub-microsecond reads."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bhensley5/overgraph"
homepage = "https://overgraph.io"
readme = "README.md"
keywords = ["graph-database", "embedded", "performance", "in-process", "rust"]
categories = ["database-implementations", "data-structures"]

[dependencies]
arc-swap = "1"
crc32fast = "1"
memmap2 = "0.9"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rmp-serde = "1"

[features]
cli = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bin]]
name = "overgraph-inspect"
path = "src/bin/inspect.rs"
required-features = ["cli"]

[[bin]]
name = "benchmark-harness"
path = "src/bin/benchmark_harness.rs"
required-features = ["cli"]

[[test]]
name = "inspect_integration"
required-features = ["cli"]

[[example]]
name = "knowledge_graph"
path = "examples/rust/knowledge_graph.rs"

[[example]]
name = "gql_readonly"
path = "examples/rust/gql_readonly.rs"

[[bench]]
name = "core_ops"
harness = false

[[bench]]
name = "query_ops"
harness = false

[[bench]]
name = "vector_ops"
harness = false

[[bench]]
name = "async_flush"
harness = false

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
