[package]
name = "overgraph-python"
version = "0.12.0"
edition = "2021"
description = "Python bindings for OverGraph"

[lib]
name = "overgraph"
crate-type = ["cdylib"]

[dependencies]
eg = { package = "overgraph", path = ".." }
pyo3 = { version = "0.23", features = ["extension-module"] }
serde_json = "1"
